fix: validate project manager id
